core code updates - enhancements to Java Trigger support
git-svn-id: http://svn.code.sf.net/p/hsqldb/svn/base@6731 7c7dc5f5-a22d-0410-a3af-b41755a11667